<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/login_txtvw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centered_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView
        android:id="@+id/login_txtvw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/login_txtvw1"
        android:text="@string/below_centered"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:padding="5dp"
        android:id="@+id/login_edittxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_txtvw2"
        android:hint="@string/user_name"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:padding="5dp"
        android:id="@+id/login_edittxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edittxt1"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_field"/>
    <Button
        android:padding="5dp"
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edittxt2"
        android:text="@string/LOGIN"
        android:textColor="#FFF"
        android:background="#00FFFF"/>


</RelativeLayout>
